test/arrays/slices/sliceAssocOOB2.good
sliceAssocOOB2.chpl:6: error: halt reached - index '9' is out-of-bounds
