test/arrays/slices/sliceAssocOOB2.chpl
const Primes = {2, 3, 5, 7, 11};
const Odds = {3, 5, 7, 9, 11};

var X: [Primes] int;

for i in X[Odds] do
  writeln(i);
